--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,9 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- bower:css -->
-	<!-- endbower -->
-
 	<link href='//fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 
+	<link href='npm_components/stylesheets/bootstrap.min.css' rel='stylesheet' type='text/css'>
 	<link href='stylesheets/main.css' rel='stylesheet' type='text/css'>
 
 	<link href="https://ury.org.uk/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
@@ -124,9 +122,10 @@
 
 </footer>
 
-<!-- bower:js -->
-<!-- endbower -->
-
+<script src="npm_components/scripts/jquery.min.js"></script>
+<script src="npm_components/scripts/jquery-ui.min.js"></script>
+<script src="npm_components/scripts/bootstrap.min.js"></script>
+<script src="npm_components/scripts/moment.min.js"></script>
 <script src="scripts/timelord.min.js"></script>
 <script src="scripts/main.min.js"></script>
 
